--- a/supervised_learning.ipynb
+++ b/supervised_learning.ipynb
@@ -3332,21 +3332,6 @@
     "            (\"ExtraTrees\", Pipeline([\n",
     "                (\"clf\", ExtraTreesClassifier(n_estimators=300, max_depth=None, n_jobs=-1, random_state=random_state))\n",
     "            ])),\n",
-    "            \n",
-    "            (\"LDA\", Pipeline([\n",
-    "                (\"clf\", LinearDiscriminantAnalysis(solver=\"svd\"))\n",
-    "            ])),\n",
-    "            ### (\"QDA\", Pipeline([\n",
-    "            ###    (\"clf\", QuadraticDiscriminantAnalysis(reg_param=0.5))\n",
-    "            ### ])),\n",
-    "            \"\"\"\n",
-    "            (\"MLP\", Pipeline([\n",
-    "                (\"scaler\", StandardScaler(with_mean=False)),\n",
-    "                (\"clf\", MLPClassifier(hidden_layer_sizes=(256,), activation=\"relu\",\n",
-    "                                      alpha=1e-4, learning_rate_init=0.001,\n",
-    "                                      max_iter=200, random_state=random_state))\n",
-    "            ])),\n",
-    "            \"\"\"\n",
     "        ])\n",
     "\n",
     "    # Build smoothed representation\n",
@@ -3371,35 +3356,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bd154dc8-c8b4-4ed5-a980-e0e56d8e8c09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training SVM-linear\n",
+      "Training RandomForest\n",
+      "Training SVM-linear\n",
+      "Training RandomForest\n",
+      "\n",
+      "=== Model Set Evaluation ===\n",
+      "representation        model  accuracy_mean_5cv  macro_f1_mean_5cv\n",
+      "M = D^{-1} W X RandomForest           0.721664           0.673025\n",
+      "M = D^{-1} W X   SVM-linear           0.665457           0.637532\n",
+      "             X RandomForest           0.726767           0.682223\n",
+      "             X   SVM-linear           0.692816           0.667993\n"
+     ]
+    }
+   ],
    "source": [
     "# Running the pipeline in Citeseer dataset\n",
     "dataset_name = \"citeseer\"  \n",
     "X, W, y = load_relational_dataset(dataset_name, base_dir=\"relational_data\")\n",
     "\n",
     "# Evaluate all models\n",
-    "results_all = evaluate_methods(X, y, W, random_state=42, model_set=\"all\")\n",
+    "results_all = evaluate_methods(X, y, W, random_state=42, model_set=\"svm_rf\")\n",
     "print(\"\\n=== Model Set Evaluation ===\")\n",
-    "print(results_all.to_string(index=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e0d0ed8-d444-494e-a23a-71456380a521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Running the pipeline in pubmed dataset\n",
-    "dataset_name = \"pubmed\" \n",
-    "X, W, y = load_relational_dataset(dataset_name, base_dir=\"relational_data\")\n",
-    "\n",
-    "# Evaluate all models\n",
-    "results_all = evaluate_methods(X, y, W, random_state=42, model_set=\"all\")\n",
-    "print(\"\\n=== Model Set ===\")\n",
     "print(results_all.to_string(index=False))"
    ]
   },
